<resources>
    <string name="app_name">EChanjo</string>
    <string name="Register"><u>Register</u></string>
    <string name="click_here_to_reset"><u>Click here to reset</u></string>
    <string name="title_activity_my">MyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="menu_schedule">Schedule</string>
    <string name="menu_add_child">Add Child</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add_child">Add Child</string>
    <string name="name_of_baby">Name of child</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="blood_group">Blood group</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="delete_user">Delete User</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="authenticate">Authenticate</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="your_profile_is_not_authenticated_yet">Your profile is not authenticated yet</string>
    <string name="current_password">Current Password</string>


    <string-array name="vaccine_birth">
        <item>Bacillus Calmette–Guérin (BCG)</item>
        <item>Oral polio vaccine (OPV 0)</item>
        <item>Hepatitis B (Hep – B1)</item>
    </string-array>

    <string-array name="vaccine_week_6">
        <item>Diptheria, Tetanus and Pertussis vaccine (DTwP 1)</item>
        <item>Inactivated polio vaccine (IPV 1)</item>
        <item>Hepatitis B  (Hep – B2)</item>
        <item>Haemophilus influenzae type B (Hib 1)</item>
        <item>Rotavirus 1</item>
        <item>Pneumococcal conjugate vaccine (PCV 1)</item>
    </string-array>

    <string-array name="vaccine_week_10">
        <item>Diptheria, Tetanus and Pertussis vaccine (DTwP 2)</item>
        <item>Inactivated polio vaccine (IPV 2)</item>
        <item>Haemophilus influenzae type B (Hib 2)</item>
        <item>Rotavirus 2</item>
        <item>Pneumococcal conjugate vaccine (PCV 2)</item>
    </string-array>

    <string-array name="vaccine_week_14">
        <item>Diptheria, Tetanus and Pertussis vaccine (DTwP 3)</item>
        <item>Inactivated polio vaccine (IPV 3)</item>
        <item>Haemophilus influenzae type B (Hib 3)</item>
        <item>Rotavirus 3</item>
        <item>Pneumococcal conjugate vaccine (PCV 3)</item>
    </string-array>

    <string-array name="vaccine_month_6">
        <item>Oral polio vaccine (OPV 1)</item>
        <item>Hepatitis B (Hep – B3)</item>
    </string-array>

    <string-array name="vaccine_month_9">
        <item>Oral polio vaccine (OPV 2)</item>
        <item>Measles, Mumps, and Rubella (MMR – 1)</item>
    </string-array>

    <string-array name="vaccine_month_9_12">
        <item>Typhoid Conjugate Vaccine</item>
    </string-array>

    <string-array name="vaccine_month_12">
        <item>Hepatitis A (Hep – A1)</item>
    </string-array>

    <string-array name="vaccine_month_15">
        <item>Measles, Mumps, and Rubella (MMR 2)</item>
        <item>Varicella 1</item>
        <item>PCV booster</item>
    </string-array>

    <string-array name="vaccine_month_16_18">
        <item>Diphtheria, Perussis, and Tetanus (DTwP B1/DTaP B1)</item>
        <item>Inactivated polio vaccine (IPV B1)</item>
        <item>Haemophilus influenzae type B (Hib B1)</item>
    </string-array>

    <string-array name="vaccine_month_18">
        <item>Hepatitis A (Hep – A2)</item>
    </string-array>

    <string-array name="vaccine_year_2">
        <item>Booster of Typhoid Conjugate Vaccine</item>
    </string-array>

    <string-array name="vaccine_year_4_6">
        <item>Diphtheria, Perussis, and Tetanus (DTwP B2/DTaP B2)</item>
        <item>Oral polio vaccine (OPV 3)</item>
        <item>Varicella 2</item>
        <item>Measles, Mumps, and Rubella (MMR 3)</item>
    </string-array>


    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>


</resources>